# daq_tokens

./: CMakeLists.txt  NOTICE  README.md
daq_tokens/: acquire.h  common.h  issues.h  verify.h
daq_tokens/internal/: cern_sso.h
doc/: RELEASE_NOTES.md
etc/systemd/system/: tdaq_token.service  tdaq_token.socket  tdaq_token_gssapi.service  tdaq_token_gssapi.socket
gssapi-utils/: gssapi.cpp  gssapi.h
jsrc/daq/tokens/: AcquireTokenException.java  JWToken.java  VerifyTokenException.java
jsrc/daq/tokens/details/: JWTAcquirer.java  JWTCommon.java  JWTVerifier.java
jsrc/daq/tokens/internal/: JDaqTokens.java  JDaqTokensJNI.java  Mode.java
jsrc/tests/: TestAcquire.java
python/daq_tokens/: __init__.py  acquire.py  cern_sso.py  keystore.py  verify.py
python/test/: acquire_time.py  test_meister.py  test_sso.py
python/token_meister/: __init__.py  common.py  gssapi.py  local.py  make.py
rpm/: README.md  daq_token.service  daq_token.socket  daq_tokens.spec  daq_tokens_gssapi.spec
src/: acquire.cpp  cern_sso.cpp  common.cpp  verify.cpp
standalone/: CMakeLists.txt  README.md
swig/: JDaqTokens.i  JDaqTokens_wrap.cxx  runSwig.sh
tests/: cpp_test.sh  start_token_meister  stop_token_meister  talk_with_meister.sh  test_acquire.cpp  test_acquire_time.cpp  test_sso.cpp  test_verify.cpp
